<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <!-- Material Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Event Detail"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail_media_cover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/img_detail_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/button_description"
                app:layout_constraintEnd_toEndOf="@+id/img_detail_media_cover"
                app:layout_constraintTop_toTopOf="@+id/img_detail_media_cover"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_fav" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail_title"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_detail_media_cover" />

            <TextView
                android:id="@+id/tv_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_by"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

            <TextView
                android:id="@+id/tv_detail_owner_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_owner"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_0" />

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_information"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_owner_name" />

            <TextView
                android:id="@+id/tv_detail_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_category"
                app:layout_constraintStart_toStartOf="@+id/tv_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_1" />

            <TextView
                android:id="@+id/tv_detail_remaining_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_remaining_quota"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_category"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_category" />

            <TextView
                android:id="@+id/tv_detail_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_event_time"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_remaining_quota"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_remaining_quota" />

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail_title_description"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_event_time" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/detail_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_2" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/detail_btn_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_description"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_description"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
